--- a/pom.xml
+++ b/pom.xml
@@ -128,5 +128,23 @@
 	</dependencies>
 	<build>
 		<finalName>ssm_template</finalName>
+		<resources>  
+            <resource>  
+                <directory>src/main/java</directory>  
+                <includes>  
+                    <include>**/*.properties</include>  
+                    <include>**/*.xml</include>  
+                </includes>  
+                <!-- 是否替换资源中的属性-->  
+                <filtering>false</filtering>  
+            </resource>  
+            <resource>  
+                <directory>src/main/resources</directory>  
+                <!--  
+                    <includes> <include>**/*.properties</include>  
+                    <include>**/*.xml</include> </includes> <filtering>true</filtering>  
+                -->  
+            </resource>  
+        </resources>  
 	</build>
 </project>
